media/css/firefox/personal.less
@import "../sandstone/lib.less";

@font-face {
    font-family: 'Fira Sans';
    src: url('/media/fonts/FiraSans-Regular.eot?#iefix') format('embedded-opentype'),
         url('/media/fonts/FiraSans-Regular.woff') format('woff'),
         url('/media/fonts/FiraSans-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Fira Sans';
    src: url('/media/fonts/FiraSans-Bold.eot?#iefix') format('embedded-opentype'),
         url('/media/fonts/FiraSans-Bold.woff') format('woff'),
         url('/media/fonts/FiraSans-Bold.ttf') format('truetype');
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: 'FiraSans Light';
    src: url('/media/fonts/FiraSans-Light.eot?#iefix') format('embedded-opentype'),
         url('/media/fonts/FiraSans-Light.woff') format('woff'),
         url('/media/fonts/FiraSans-Light.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'FiraSans Light';
    src: url('/media/fonts/FiraSans-SemiBold.eot?#iefix') format('embedded-opentype'),
         url('/media/fonts/FiraSans-SemiBold.woff') format('woff'),
         url('/media/fonts/FiraSans-SemiBold.ttf') format('truetype');
    font-weight: bold;
    font-style: normal;
}

body {
    font-family: 'Fira Sans'
}

#outer-wrapper {
    background: none;
}
#wrapper {
    width: 100%;
}
#masthead {
    background: #0c99d5 url(/media/img/firefox/personal/header.png) 0 0 no-repeat;

    @media only screen and (min-width: @breakTablet) and (max-width: @breakDesktop) {
        width: 100%;
    }
}
.header-content {
    margin: 0 auto;
    padding: 0 0 80px;
    width: 90%;
    max-width: 1400px;
    text-align: center;

    @media only screen and (max-width: @breakMobileLandscape) {
        padding: 0 0 60px;
        width: 100%;
    }

    h1 {
        color: #bee1f5;
        margin: 0 0 55px 0;
        padding-top: 40px;
        font-family: 'FiraSans Light';
        .font-size(4.5rem);
        font-weight: bold;
        line-height: 1;
        text-transform: uppercase;
        letter-spacing: -0.035em;
        text-shadow: none;

        @media only screen and (max-width: @breakDesktop) {
            .font-size(3rem);
        }

        @media only screen and (max-width: @breakTablet) {
            font-family: 'Fira Sans';
            .font-size(2.5rem);
            letter-spacing: -1px;
        }

        span {
            display: block;
            color: #fff;
            margin-left: 28%;

            @media only screen and (max-width: @breakMobileLandscape) {
                margin-left: 0;
            }
        }
    }
    h1:before {
        display: block;
        background: transparent url(/media/img/firefox/personal/logo.png) 0 0 no-repeat;
        margin: 0 auto @baseLine;
        width: 148px;
        height: 148px;
        content: '';
        .at2x('/media/img/firefox/personal/logo.png', 148px);
    }
    .download-button.download-button-simple {
        /* copied from buttons.less :: .button-flat - with amendments */
        background: #6fbe4a;
        color: #fff;
        padding: 12px (@baseLine * 2);
        margin-bottom: 0;
        border: none;
        cursor: pointer;
        max-width: 300px;
        max-height: 68px;
        font-family: 'FiraSans Light';
        font-weight: bold;
        .font-size(1.5rem);
        text-align: center;
        .inline-block();
        .border-radius(10px);
        .transition();

        @media only screen and (max-width: @breakMobileLandscape) {
            padding: 6px @baseLine;
        }

        @media only screen and (max-width: @breakMobile) {
            min-width: 260px;
            .font-size(1rem);
        }

        &:hover {
            background-color: #7dc14c;
        }
        .download-link {
            box-shadow: none;
            background-color: inherit;
            background-image: none;
            font-family: inherit;
            font-weight: bold;
            text-shadow: none;
            /* for IE */
            filter: none;
        }
    }
    .download-content {
        text-transform: uppercase;
    }
}
main {
    margin: 0 auto;
    padding: 60px 0 150px 0;
    width: 100%;
    max-width: 1400px;
    text-align: center;

    @media only screen and (max-width: @breakMobileLandscape) {
        padding: 20px 0;
    }
}
.mission-icons-sprite(@posx, @posy) {
    display: block;
    background-image: url(/media/img/firefox/personal/mission-icons-sprite.png);
    background-position: @posx @posy;
    background-repeat: no-repeat;
    margin-top: @baseLine;
    height: 190px;
    content: '';
    .at2x('/media/img/firefox/personal/mission-icons-sprite.png', 175px);
}
.mission {
    display: inline-block;
    padding: 0 25px;
    width: 25%;
    vertical-align: top;

    @media only screen and (max-width: @breakTablet) {
        display: block;
        margin: (@baseLine * 3) 0 0 0;
        padding: 0;
        width: 100%;
    }

    &:first-child {
        @media only screen and (max-width: @breakTablet) {
            margin-top: 0;
        }
    }

    p {
        color: #999;
        font-family: 'FiraSans Light';
        .font-size(1.75rem);
        line-height: 1.3;

        @media only screen and (max-width: @breakDesktop) {
            .font-size(1.35rem);
        }

        @media only screen and (max-width: @breakMobileLandscape) {
            .font-size(1.25rem);
        }

        span {
            display: block;
            color: #56565a;
            .font-size(2rem);
            font-weight: bold;
            text-transform: uppercase;
        }
    }
    p:before {
        .mission-icons-sprite(50%, 0);
    }
    p.data:before {
        .mission-icons-sprite(50%, -184px);
    }
    p.choice:before {
        .mission-icons-sprite(50%, -380px);
    }
    a {
        .font-size(1.25rem);

        @media only screen and (max-width: @breakMobileLandscape) {
            .font-size(1.1rem);
        }

        &:hover {
            color: #005da5;
        }
    }
}

/*--------------------------------------------------------------------------*/
// Simple Footer
#footer {
    background: #fff;

    .content {
        margin: 0 auto;
        padding: (@baseLine * 2) 0 (@baseLine * 3);
        max-width: 1400px;
        text-align: center;

        @media only screen and (max-width: @breakTablet) {
            padding: @baseLine 0;
            width: 100%;
        }
    }

    .mozlogo {
        .image-replaced();
        display: inline-block;
        margin: 0 20px -2px 0;
        background: url(/media/img/firefox/personal/mozilla_wordmark.png) 0 0 no-repeat;
        width: 94px;
        height: 29px;

        @media only screen and (max-width: @breakTablet) {
            margin-bottom: 15px;
        }
    }

    ul {
        display: inline;
        margin: 0;
        list-style: none;
        .font-size(@smallFontSize);

        @media only screen and (max-width: @breakTablet) {
            display: block;
        }

        li {
            display: inline;
            margin: 0 10px;

            @media only screen and (max-width: @breakTablet) {
                display: inline-block;
                margin: 0 -5px 0 10px;
            }

            &:after {
                content: '•';
                color: @textColorPrimary;
                margin: 0 0 0 10px;
            }

            &:last-child:after {
                content: '';
            }
        }
    }
}

/* specific styles to show download from play store buttons on android. */
.android-download,
section.android-download {
    display: none;
}
.android {
    .download-button.download-button-simple {
        display: none;
    }
    .android-download,
    section.android-download {
        display: block;
    }
    section.android-download {
        background-color: #f2f2f2;
        color: #56565a;
        margin: 0 auto;
        padding: 40px 0;
        width: 100%;
        max-width: 1400px;
        text-align: center;
        p {
            margin: 0 auto 20px;
            max-width: 300px;
            .font-size(2rem);
            font-weight: bold;
            line-height: 1.2;
            letter-spacing: -1px;
            text-transform: uppercase;
        }
    }
}

